2022-XX-XX   2.4.2:
-------------------
  * optimize `.bytereverse()`


2022-03-29   2.4.1:
-------------------
  * improve `resize()`, see #167
  * optimize `copy_n()` by avoiding loops, #171
  * `.bytereverse()` no longer sets unused bits to zero


2022-03-01   2.4.0:
-------------------
  * enable building wheels for multiple platforms and Python versions using
    pypa/cibuildwheel, see #165 and #170 (thanks Brian Thorne, @hardbyte)
  * use setuptools instead of distutils in `setup.py`, #168
  * add missing type hinting for `.count()` step argument


2022-02-21   2.3.7:
-------------------
  * add optional step argument to `.count()` method, see #162 and #163
  * add tests


2022-02-07   2.3.6:
-------------------
  * add optional value parameter to `util.count_n()`, see #154 and #161
  * determine machine endianness at build time when possible, by using
    the `PY_LITTLE_ENDIAN` macro, in order to optimize `shift_r8()`
  * add official Python 3.11 support


2022-01-07   2.3.5:
-------------------
  * Fixed bug for big-endian systems (such as IBM s390), see #159 and #160
  * Pass `zip_safe=False` to `setup()`, see #151


2021-09-12   2.3.4:
-------------------
  * Fix `util.ba2int()` for frozenbitarrays.  A bug was introduced in 2.3.0
    as `.tobytes()` no longer treats pad bits for read-only buffers as zero.
  * add tests


2021-09-05   2.3.3:
-------------------
  * improve some error messages
  * add tests


2021-08-23   2.3.2:
-------------------
  * fix slice assignment for shared buffer with offset case, see #3ba05687
    and #73081e98
  * add tests (including internal debug mode tests for `buffers_overlap()`)


2021-08-20   2.3.1:
-------------------
  * fix special shared buffer copy case, see #815c2a11
  * add and improve tests


2021-08-15   2.3.0:
-------------------
  * add optional `buffer` argument to `bitarray()` to import the buffer of
    another object, #141, #146, see also: [buffer protocol](buffer.rst)