@@ -1,6 +1,7 @@
 2022-XX-XX   2.4.2:
 -------------------
   * optimize `.bytereverse()`
+  * optimize `delslice()` for cases like `del a[1:17:2]` when `a` is large
 
 
 2022-03-29   2.4.1:
